@@ -1,6 +1,7 @@
 Version 1.6
 ------------------------------------------------------------------------------
 
+* fix bug in rename when renaming multiple columns
 
 Version 1.5 (2011-03-02)
 ------------------------------------------------------------------------------
